tests/paczka1/small_fuzzy/70323884.err
Error in line 4: OizGQBywEs A228 72,7
Error in line 6: OizGQBywEs S615 95,0
